Fixed overflow

--- a/css/main.css
+++ b/css/main.css
@@ -498,7 +498,7 @@ nav:hover {
 
     #shape2 {
         top: 55vh;
-        left: calc(2vw + 25px);
+        left: calc(2vw + 20px);
         transform: rotate(-45deg);
         width: 60px;
         height: 60px;
@@ -507,7 +507,7 @@ nav:hover {
 
     #shape3 {
         top: 60vh;
-        left: calc(98vw - 100px);
+        left: calc(96vw - 100px);
         transform: rotate(-45deg);
         background: linear-gradient(to right, #56ab2f, #a8e063); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     }
@@ -544,7 +544,7 @@ nav:hover {
 
     #shape8 {
         top: 150vh;
-        left: calc(98vw - 100px);
+        left: calc(95vw - 100px);
         -webkit-transform: rotate(-45deg);
         -moz-transform: rotate(-45deg);
         -ms-transform: rotate(-45deg);
@@ -567,7 +567,7 @@ nav:hover {
 
     #shape10 {
         top: 190vh;
-        left: calc(98vw - 100px);
+        left: calc(92vw - 100px);
     }
 
     #shape11 {
@@ -590,7 +590,7 @@ nav:hover {
 
     #shape14 {
         top: 240vh;
-        left: calc(92vw - 100px);
+        left: calc(92vw - 90px);
         /*background-image: linear-gradient(to top, #007adf 0%, #00ecbc 100%);*/
         /*border-radius: 5000px;*/
         width: 80px;
